--- a/styles/scss/_resets.scss
+++ b/styles/scss/_resets.scss
@@ -15,7 +15,6 @@ body {
   max-width: 100%;
   height: auto;
 }
-
 .touch-none {
-  position: fixed;
+  touch-action: none;
 }
